# system-ocr

./: Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: CI.yml
__test__/: index.spec.ts
example/: index.js
src/: lib.rs  macos.rs  windows.rs
