[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2024"
name = "system_ocr_napi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
thiserror = "2"
napi = { version = "3.0.0-beta.1", default-features = false, features = [
  "napi3",
  "error_anyhow",
] }
napi-derive = "3.0.0-beta.1"

[target.'cfg(target_os = "windows")'.dependencies]
file_type = "0.8"
windows = { version = "0.61.1", features = [
  "Foundation_Collections",
  "Globalization",
  "Graphics_Imaging",
  "Media_Ocr",
  "Storage_Streams",
] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
# Objective-C / Apple framework bindings
objc2 = { version = "0.6" }
objc2-foundation = "0.3"
objc2-core-foundation = "0.3"
objc2-core-graphics = "0.3"
objc2-vision = { version = "0.3", features = [
  "VNObservation",
  "VNTypes",
  "VNRequestRevisionProviding",
] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
